spacing fixed

--- a/styles.css
+++ b/styles.css
@@ -6,9 +6,8 @@ footer {
 
 .Footer__listitems {
     color: white;
-    margin: 1rem;
     padding: .5rem;
-    line-height: 17px;
+    margin-top: 1rem;
 }
 
 .Footer__copyright {
@@ -19,6 +18,7 @@ footer {
 
 .Footer__listitems li {
     list-style-type: none;
+    padding-top: 1rem;
   }
 
 
